# moma

./: pyproject.toml
moma/: args.py  clean.py  log_filter.py  moma.py  new.py  parameter.py  post.py  run.py  store.py  util.py
moma/templates/: moris.json
